type mostly set

--- a/index.html
+++ b/index.html
@@ -34,19 +34,21 @@
 	
 	<h3><span class="h3-sub">A</span> Fashion Sitcom</h3>
 	
-	<h2>Collection 05 and film premiers January 2016,</h2>
+	<h2 class="collection-callout">Collection 05 and &#xFB01;lm premiers January 2016,</h2>
 	
-	<form>
+	<form id="newsletter" action="#">
 		<input type="email" placeholder="Email Address" />
-		<button type="submit">Subscribe</button>
+		<button type="submit" class="button--submit">Subscribe</button>
 	</form>
 
 </section>
 
 <section id="bottom-section">
 	
-	<h2>In collaboration with Eric Mack</h2>
-	<h2>With Original score by Michael Beharie</h2>
+	<div class="masonry-type">
+		<h2>In collaboration with Eric Mack</h2>
+		<h2>And original score by Michael Beharie</h2>
+	</div>
 	
 	<article id="credits">
 		
@@ -60,7 +62,7 @@
 			<li><h4>Creative Director</h4><h5>Harry Gassel</h5></li>
 			<li><h4>Director</h4><h5>Pepi Ginsberg</h5></li>
 			<li><h4>Producer</h4><h5>Like Clothing &amp; Harry Gassel</h5></li>
-			<li><h4>Screenplay</h4><h5>Harry Gassel &mp; Jacob Savage</h5></li>
+			<li><h4>Screenplay</h4><h5>Harry Gassel &amp; Jacob Savage</h5></li>
 			<li><h4>Additional Jokes</h4><h5>Gabrielle Lamontagne</h5></li>
 			<li><h4>Art</h4><h5>Eric Mack</h5></li>
 			<li><h4>Costumes</h4><h5>Like Clothing</h5></li>
@@ -94,9 +96,12 @@
 		<li><a href="#" title="Collection 02 pdf">Collection 02 (pdf)</a></li>
 	</ul>
 	
+	<div class="copyright"><p>&copy; Copyright 2016, Like Clothing</p> <a href="#">Twitter</a>, <a href="#">Instagram</a>, <a href="#">Facebook</a></div>
+	
 </footer>
 
 <!-- JS -->
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+  
 </body>
 </html>
