finished loop effect with top section fading in the bottom

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <![endif]-->
 
 </head>
-<body>
+<body data-module-init="body">
 
 <!-- Place your content here -->
 <section id="video-container" data-module-init="videos">
@@ -60,19 +60,16 @@
 		<h3>Like Clothing <span class="h3-sub">Presents</span></h3>
 	</header>
 
-	<h1>What are we doing tonight?</h1>
+	<h1>What are we<br class="mobile-portrait-hide"> doing tonight?</h1>
 	
 	<h3><span class="h3-sub">A</span> Fashion Sitcom</h3>
 	
-	<h2 class="collection-callout">Collection 05 and &#xFB01;lm premiers January 2016,</h2>
+	<h2 class="collection-callout">Collection 05 and &#xFB01;lm<br>premiers January 2016,</h2>
 	
 	<form class="newsletter" action="#">
 		<input type="email" placeholder="Email Address" />
 		<button type="submit" class="button--submit">Subscribe</button>
 	</form>
-
-	
-
 </section>
 
 
@@ -145,7 +142,30 @@
 	</div>
 	-->
 </section>
+
+
+<section class="top-section bottom-fixed">
+
+	<header>
+		<h3>Like Clothing <span class="h3-sub">Presents</span></h3>
+	</header>
+
+	<h1>What are we<br class="mobile-portrait-hide"> doing tonight?</h1>
+	
+	<h3><span class="h3-sub">A</span> Fashion Sitcom</h3>
+	
+	<h2 class="collection-callout">Collection 05 and &#xFB01;lm<br>premiers January 2016,</h2>
+	
+	<form class="newsletter" action="#">
+		<input type="email" placeholder="Email Address" />
+		<button type="submit" class="button--submit">Subscribe</button>
+	</form>
+</section>
+
 </div><!--wrapper-->
+
+
+
 
 
 <!-- JS -->
