--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
 <section id="video-container" data-module-init="videos">
 	<div class="video-scroll">
 		<div class="video-holder video-1">
-			<video id="video" src="assets/videos/clip1_web.mov"  autoplay loop playsinline></video>
+			<video id="video" src="assets/videos/clip1_web.mov"  muted  autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip2_web.mov"  autoplay loop playsinline></video>
+			<video id="video" src="assets/videos/clip2_web.mov"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip3_web.mov"  loop playsinline></video>
+			<video id="video" src="assets/videos/clip3_web.mov"  muted  loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip4_web.mov"  loop playsinline></video>
+			<video id="video" src="assets/videos/clip4_web.mov"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip5_web.mov"  loop playsinline></video>
+			<video id="video" src="assets/videos/clip5_web.mov"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip6_web.mov"  loop playsinline></video>
+			<video id="video" src="assets/videos/clip6_web.mov"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder video-7">
-			<video id="video" src="assets/videos/clip7_web.mov"  loop playsinline></video>
+			<video id="video" src="assets/videos/clip7_web.mov"  muted loop playsinline></video>
 		</div>
 	</div>
 	
@@ -82,8 +82,8 @@
 	</div>
 	-->
 	<div class="masonry-type">
-		<h2>In collaboration with Eric Mack</h2>
-		<h2>And original score by Michael Beharie</h2>
+		<h2>In collaboration <br class="mobile-portrait-hide">with Eric Mack</h2>
+		<h2>And original score <br class="mobile-portrait-hide">by Michael Beharie</h2>
 	</div>
 	
 	<article class="credits">
