--- a/index.html
+++ b/index.html
@@ -23,25 +23,28 @@
 <section id="video-container" data-module-init="videos">
 	<div class="video-scroll">
 		<div class="video-holder video-1">
-			<video id="video" src="assets/videos/clip1_web.mov"  muted  autoplay loop playsinline></video>
+			<video id="video-1" src="assets/videos/clip1_web.mov"  muted  autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip2_web.mov"  muted autoplay loop playsinline></video>
+			<video id="video-2" src="assets/videos/clip2_web.mov"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip3_web.mov"  muted  loop playsinline></video>
+			<video id="video-3" src="assets/videos/clip3_web.mov"  muted  loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip4_web.mov"  muted loop playsinline></video>
+			<video id="video-4" src="assets/videos/clip4_web.mov"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip5_web.mov"  muted loop playsinline></video>
+			<video id="video-5" src="assets/videos/clip5_web.mov"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video" src="assets/videos/clip6_web.mov"  muted loop playsinline></video>
+			<video id="video-6" src="assets/videos/clip6_web.mov"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder video-7">
-			<video id="video" src="assets/videos/clip7_web.mov"  muted loop playsinline></video>
+			<video id="video-7" src="assets/videos/clip7_web.mov"  muted loop playsinline></video>
+		</div>
+		<div class="video-holder video-1-clone">
+			<video id="video-8" src="assets/videos/clip1_web.mov"  muted  autoplay loop playsinline></video>
 		</div>
 	</div>
 	
@@ -53,7 +56,7 @@
 
 <div id="color-overlay"></div>
 
-<div class="wrapper">
+<div id="wrapper" class="wrapper" data-module-init="control-scroll desktop-scroll mobile-scroll" iscroll-instance="myScroll"><div id="scroller">
 <section class="top-section">
 
 	<header>
@@ -64,10 +67,10 @@
 	
 	<h3><span class="h3-sub">A</span> Fashion Sitcom</h3>
 	
-	<h2 class="collection-callout">Collection 05 and &#xFB01;lm<br>premiers January 2016,</h2>
+	<h2 class="collection-callout">Collection 05 and &#xFB01;lm<br>premiers January 2016</h2>
 	
 	<form class="newsletter" action="#">
-		<input type="email" placeholder="Email Address" />
+		<input type="email" class="top-input" placeholder="Email Address" />
 		<button type="submit" class="button--submit">Subscribe</button>
 	</form>
 </section>
@@ -144,6 +147,11 @@
 </section>
 
 
+
+
+</div></div><!--wrapper--><!--scroller-->
+
+
 <section class="top-section bottom-fixed">
 
 	<header>
@@ -154,23 +162,18 @@
 	
 	<h3><span class="h3-sub">A</span> Fashion Sitcom</h3>
 	
-	<h2 class="collection-callout">Collection 05 and &#xFB01;lm<br>premiers January 2016,</h2>
+	<h2 class="collection-callout">Collection 05 and &#xFB01;lm<br>premiers January 2016</h2>
 	
-	<form class="newsletter" action="#">
-		<input type="email" placeholder="Email Address" />
+	<form class="newsletter" action="#" data-module-init="form">
+		<input type="email" class="bottom-input" placeholder="Email Address" />
 		<button type="submit" class="button--submit">Subscribe</button>
 	</form>
 </section>
 
-</div><!--wrapper-->
-
-
-
-
 
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="http://cdn.jsdelivr.net/velocity/1.4.0/velocity.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll-probe.js"></script>
 <script src="assets/js/main.min.js"></script>
 </body>
 </html>
