--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 </head>
 <body data-module-init="body">
 
+
+<button id="audio" class="active button--audtio" data-module-init="audio"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.03 33"><defs><style>.cls-1{fill:#fff;}</style></defs><title>musicnote</title><path class="cls-1" d="M26,0L7.31,3V25.55A5.87,5.87,0,0,0,4,25.44C1.32,26.1-.42,28.29.09,30.32s3.07,3.15,5.73,2.48c2.33-.58,4-2.34,4-4.14h0v-18L23.56,8.51V22.43a5.94,5.94,0,0,0-3.4-.12c-2.68.67-4.44,2.88-3.92,4.94s3.1,3.18,5.79,2.51c2.44-.61,4.12-2.5,4-4.39V0Z" transform="translate(0)"/></svg></button>
+
 <!-- Place your content here -->
 <section id="video-container" data-module-init="videos">
 	<div class="video-scroll">
@@ -56,7 +59,7 @@
 
 <div id="color-overlay"></div>
 
-<div id="wrapper" class="wrapper" data-module-init="control-scroll desktop-scroll mobile-scroll" iscroll-instance="myScroll"><div id="scroller">
+<div id="wrapper" class="wrapper" data-module-init="control-scroll desktop-scroll mobile-scroll"><div id="scroller">
 <section class="top-section">
 
 	<header>
@@ -173,6 +176,7 @@
 
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.4.1/velocity.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/iScroll/5.2.0/iscroll-probe.js"></script>
 <script src="assets/js/main.min.js"></script>
 </body>
