fixed glitchyness in videos

--- a/index.html
+++ b/index.html
@@ -22,38 +22,39 @@
 
 <button id="audio" class="active button--audtio" data-module-init="audio"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.03 33"><defs><style>.cls-1{fill:#fff;}</style></defs><title>musicnote</title><path class="cls-1" d="M26,0L7.31,3V25.55A5.87,5.87,0,0,0,4,25.44C1.32,26.1-.42,28.29.09,30.32s3.07,3.15,5.73,2.48c2.33-.58,4-2.34,4-4.14h0v-18L23.56,8.51V22.43a5.94,5.94,0,0,0-3.4-.12c-2.68.67-4.44,2.88-3.92,4.94s3.1,3.18,5.79,2.51c2.44-.61,4.12-2.5,4-4.39V0Z" transform="translate(0)"/></svg></button>
 
-<!-- Place your content here -->
+
 <section id="video-container" data-module-init="videos">
 	<div class="video-scroll">
 		<div class="video-holder video-1">
-			<video id="video-1" src="assets/videos/clip1_web.mov"  muted  autoplay loop playsinline></video>
+			<video id="video-1" src="assets/videos/c_1.mp4"  muted  autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-2" src="assets/videos/clip2_web.mov"  muted autoplay loop playsinline></video>
+			<video id="video-2" src="assets/videos/c_2.mp4"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-3" src="assets/videos/clip3_web.mov"  muted  loop playsinline></video>
+			<video id="video-3" src="assets/videos/c_3.mp4"  muted autoplay  loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-4" src="assets/videos/clip4_web.mov"  muted loop playsinline></video>
+			<video id="video-4" src="assets/videos/c_4.mp4"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-5" src="assets/videos/clip5_web.mov"  muted loop playsinline></video>
+			<video id="video-5" src="assets/videos/c_5.mp4"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-6" src="assets/videos/clip6_web.mov"  muted loop playsinline></video>
+			<video id="video-6" src="assets/videos/c_6.mp4"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder video-7">
-			<video id="video-7" src="assets/videos/clip7_web.mov"  muted loop playsinline></video>
+			<video id="video-7" src="assets/videos/c_7.mp4"  muted autoplay loop playsinline></video>
+		</div>
+		<div class="video-holder video-8">
+			<video id="video-8" src="assets/videos/c_8.mp4"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder video-1-clone">
-			<video id="video-8" src="assets/videos/clip1_web.mov"  muted  autoplay loop playsinline></video>
+			<video id="video-10" src="assets/videos/c_1.mp4"  muted  autoplay loop playsinline></video>
 		</div>
 	</div>
-	
-	
-	
 </section>
+
 
 <button class="button--mute"></button>
 
