audio hover elements

--- a/index.html
+++ b/index.html
@@ -32,25 +32,33 @@
 			<video id="video-2" src="assets/videos/c_2.mp4"  muted autoplay loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-3" src="assets/videos/c_3.mp4"  muted autoplay  loop playsinline></video>
+			<video id="video-3" src="assets/videos/c_3.mp4"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-4" src="assets/videos/c_4.mp4"  muted autoplay loop playsinline></video>
+			<video id="video-4" src="assets/videos/c_4.mp4"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-5" src="assets/videos/c_5.mp4"  muted autoplay loop playsinline></video>
+			<video id="video-5" src="assets/videos/c_5.mp4"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder">
-			<video id="video-6" src="assets/videos/c_6.mp4"  muted autoplay loop playsinline></video>
+			<video id="video-6" src="assets/videos/c_6.mp4"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder video-7">
-			<video id="video-7" src="assets/videos/c_7.mp4"  muted autoplay loop playsinline></video>
+			<video id="video-7" src="assets/videos/c_7.mp4"  muted loop playsinline></video>
 		</div>
 		<div class="video-holder video-8">
-			<video id="video-8" src="assets/videos/c_8.mp4"  muted autoplay loop playsinline></video>
+			<video id="video-8" src="assets/videos/c_8.mp4"  muted loop playsinline></video>
 		</div>
+		<!--
+		<div class="video-holder">
+			<video id="video-9" src="assets/videos/c_9.mp4"  muted loop playsinline></video>
+		</div>
+			-->
 		<div class="video-holder video-1-clone">
-			<video id="video-10" src="assets/videos/c_1.mp4"  muted  autoplay loop playsinline></video>
+			<video id="video-10" src="assets/videos/c_1.mp4"  muted loop playsinline></video>
+		</div> 
+		<div class="video-holder">
+			<video id="video-2-clone" src="assets/videos/c_2.mp4"  muted autoplay loop playsinline></video>
 		</div>
 	</div>
 </section>
@@ -67,7 +75,7 @@
 		<h3>Like Clothing <span class="h3-sub">Presents</span></h3>
 	</header>
 
-	<h1>What are we<br class="mobile-portrait-hide"> doing tonight?</h1>
+	<h1 data-audio="DoorKnock_CTV04_54_03.wav" data-module-init="audio-hover">What are we<br class="mobile-portrait-hide"> doing tonight?</h1>
 	
 	<h3><span class="h3-sub">A</span> Fashion Sitcom</h3>
 	
@@ -75,7 +83,7 @@
 	
 	<form class="newsletter" action="#">
 		<input type="email" class="top-input" placeholder="Email Address" />
-		<button type="submit" class="button--submit">Subscribe</button>
+		<button type="submit" class="button--submit" data-audio="LaughterCrowd_AR03_44.wav" data-module-init="audio-hover">Subscribe</button>
 	</form>
 </section>
 
@@ -89,8 +97,8 @@
 	</div>
 	-->
 	<div class="masonry-type">
-		<h2>In collaboration <br class="mobile-portrait-hide">with Eric Mack</h2>
-		<h2>And original score <br class="mobile-portrait-hide">by Michael Beharie</h2>
+		<h2 data-audio="ApplauseCheer_CTV01_92_01.wav" data-module-init="audio-hover">In collaboration <br class="mobile-portrait-hide">with Eric Mack</h2>
+		<h2 data-audio="Applause_CTV01_87_01.wav" data-module-init="audio-hover">And original score <br class="mobile-portrait-hide">by Michael Beharie</h2>
 	</div>
 	
 	<article class="credits">
@@ -170,7 +178,7 @@
 	
 	<form class="newsletter" action="#" data-module-init="form">
 		<input type="email" class="bottom-input" placeholder="Email Address" />
-		<button type="submit" class="button--submit">Subscribe</button>
+		<button type="submit" class="button--submit" data-audio="LaughterCrowd_AR03_44.wav" data-module-init="audio-hover">Subscribe</button>
 	</form>
 </section>
 
